# KinectCap

./: .gitignore  CMakeLists.txt  check_txt_png.py  copy_lib.ps1  obstacle.json
lib/: OpenNI2.lib  Simulation.lib  Simulation.lib.bak  Simulationd.lib  Simulationd.lib.bak  cam_lib.lib
src/: KinectManager.cpp  KinectManager.h  KinectManagerImGui.cpp  KinectManagerImGui.h  KinectMode.cpp  KinectMode.h  KinectResource.cpp  KinectResource.h  PoseEstimator.h  Render.cpp  Render.h  RenderCallback.h  kinect_manager.cpp  kinect_manager.h  main.cpp
src/kinect/: CMakeLists.txt  KinectManager.cpp  KinectManager.h  KinectManagerImGui.cpp  KinectManagerImGui.h  KinectResource.cpp  KinectResource.h
src/raycast/: CMakeLists.txt  Raycast.cpp  Raycast.h
src/render/: CMakeLists.txt  ColorDepthFixer.cpp  ColorDepthFixer.h  Render.cpp  Render.h  RenderCallback.cpp
src/utils/: CMakeLists.txt  DefUtil.h  OpenCVUtil.cpp  OpenCVUtil.h  PoseEstimator.cpp  PoseEstimator.h
